--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -39,6 +39,8 @@
       "creation_only": "Только при создании",
       "prerequisites": "Пререквизиты",
       "bonus": "Бонус",
+      "situation_bonus": "Ситуативный бонус",
+      "permanent_bonus": "Постоянный бонус",
       "difficult": "Сложный",
       "theoretical": "Теоретический",
       "default": "По умолчанию",
@@ -167,6 +169,7 @@
       "create_header": "Создание персонажа",
       "edit_header": "Прокачка персонажа",
       "inherents_disclaimer": "Врожденные особенности персонажа создаются случайным образом. По нажатию на кнопку, вы можете создать набор врожденных особенностей для вашего персонажа. Создать набор врожденных особенностей для персонажа можно только раз, и изменить их потом можно будет только по согласованию с мастером.",
+      "view_inherents_disclaimer": "На странице выводится лишь базовое значение врожденных особенностей. Значение характеристики после применения всех модификаторов следует смотреть на вкладке производных характеристик либо атрибутов на странице просмотра",
       "notices_disclaimer": "Эта страница предназначена для хранения записей о персонаже, содержащих информацию, не подпадающую под другие категории (благочестие, репутация и других). В каждой заметке есть поле EXP - указанное количество опыта снимется с вашего персонажа, если вы добавите заметку. Вы также можете добавлять записи, не с нимающие с персонажа опыт - в таком случае, просто оставьте поле EXP пустым",
       "randomize_inherents": "Сгенерить врожденки",
       "quality_label": "Особенности:",
@@ -174,6 +177,8 @@
       "categories_label_mobile": "Категория",
       "quality_placeholder": "Выберите особенность...",
       "description": "Описание:",
+      "situation_bonus": "Ситуативный бонус:",
+      "permanent_bonus": "Постоянный бонус:",
       "spell_effect": "Эффект:",
       "rolls": "Броски:",
       "search_attached_skill_placeholder": "Имя навыка",
@@ -378,6 +383,7 @@
         "poise_check": "Равновесие",
         "cloaking_moving": "Маскировка (движение)",
         "cloaking_not_moving": "Маскировка (неподвижность)",
+        "poisons_resistance": "Сопротивление ядам",
         "saving_throws": {
           "header": "Спасброски",
           "horror": "Ужас",
@@ -470,7 +476,8 @@
         "min": "Минимум:",
         "max": "Максимум:",
         "description": "Описание:",
-        "bonus": "Бонус:"
+        "permanent_bonus": "Постоянный бонус:",
+        "situation_bonus": "Ситуативный бонус:"
       },
       "edit": {
         "title": "Изменить врожденную особенность",
@@ -479,8 +486,8 @@
         "min": "Минимум:",
         "max": "Максимум:",
         "description": "Описание:",
-        "bonus": "Бонус:",
-        "back": "Назад"
+        "permanent_bonus": "Постоянный бонус:",
+        "situation_bonus": "Ситуативный бонус:"
       },
       "delete": {
         "text": "Вы уверены что хотите удалить данную врожденную особенность?"
@@ -497,7 +504,8 @@
         "cost": "Стоимость:",
         "categories": "Категории:",
         "description": "Описание:",
-        "bonus": "Бонус:",
+        "permanent_bonus": "Постоянный бонус:",
+        "situation_bonus": "Ситуативный бонус:",
         "creation_only": "Только при создании"
       },
       "edit": {
@@ -506,7 +514,8 @@
         "cost": "Стоимость:",
         "categories": "Категории:",
         "description": "Описание:",
-        "bonus": "Бонус:",
+        "permanent_bonus": "Постоянный бонус:",
+        "situation_bonus": "Ситуативный бонус:",
         "creation_only": "Только при создании"
       },
       "options": {
@@ -681,7 +690,8 @@
         "cost": "Стоимость:",
         "categories": "Категории:",
         "description": "Описание:",
-        "bonus": "Бонус:",
+        "permanent_bonus": "Постоянный бонус:",
+        "situation_bonus": "Ситуативный бонус:",
         "unremovable": "Неудаляемый"
       },
       "edit": {
@@ -690,7 +700,8 @@
         "cost": "Стоимость:",
         "categories": "Категории:",
         "description": "Описание:",
-        "bonus": "Бонус:",
+        "permanent_bonus": "Постоянный бонус:",
+        "situation_bonus": "Ситуативный бонус:",
         "unremovable": "Неудаляемый"
       },
       "options": {
