--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -318,6 +318,9 @@
         "notices": "Заметки",
         "additional_derived": "Производные"
       },
+      "dodge": "Уклонение",
+      "ranged_hit": "Дальнобойные атаки",
+      "initiative": "Инициатива",
       "derivative": {
         "hit_pierce_punch": "Количество кубиков на бросок попадания колющим/режущим ударом. Равно ловкости+скорости персонажа",
         "hit_chop_punch": "Количество кубиков на бросок попадания рубящим ударом. Равно ловкости+силе персонажа",
