--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -45,7 +45,7 @@
       "theoretical": "Теоретический",
       "default": "По умолчанию",
       "spells": "Заклинания",
-      "roll": "Roll",
+      "roll": "Бросок",
       "basic_skill": "Базовый навык",
       "level": "Уровень",
       "unremovable": "Неудаляемый",
