--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -616,6 +616,7 @@
       "header": "Basic rolls for",
       "add": {
         "title": "Add roll",
+        "name": "Name:",
         "description": "Roll description:",
         "attribute": "Attribute:",
         "attribute_place_holder": "Select attribute..."
