--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -224,6 +224,7 @@
       "wisdom9_bonus_warning": "Значение мудрости 9 позволит вам приобретать прикрепленные навыки на 2 дешевле, но изменение вступит в силу только после сохранения изменений",
       "save_changes_warning": "После внесения изменений вы не сможете больше вернуться на страницу создания персонажа!",
       "delete_character": "Вы уверены что хотите удалить персонажа, его невозможно восстановить!",
+      "karate": "Карате",
       "avatar": {
         "title": "Загрузить аватар персонажа",
         "default_message": "Перетащите картинку в область или кликните для загрузки",
