--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -225,6 +225,8 @@
       "save_changes_warning": "After making changes, you will not be able to return to the character creation page!",
       "delete_character": "Are you sure you want to delete the character? It can not be restored!",
       "karate": "Karate",
+      "meditation": "Meditation",
+      "zigun": "Zi-gun",
       "avatar": {
         "title": "Upload character's avatar",
         "default_message": "Drag picture to the area or click for upload",
@@ -335,6 +337,29 @@
         "initiative": "Dice amount to roll initiative. Equals to character`s reaction"
       },
       "additional_derivatives": {
+        "base_value": "Base: ",
+        "in_min": "per min.",
+        "dexterity_bonus": "dexterity bonus",
+        "endurance_bonus": "endurance bonus",
+        "vitality_bonus": "vitality bonus",
+        "power_bonus": "strength bonus",
+        "will_bonus": "will bonus",
+        "charisma_bonus": "charisma bonus",
+        "skill_absent": "skill absent",
+        "cloaking_expert": "cloaking expert",
+        "cloaking_master": "cloaking master",
+        "cloaking_magister": "cloaking magister",
+        "karate_expert": "karate expert",
+        "karate_master": "karate master",
+        "karate_magister": "karate magister",
+        "karate_grand_master": "karate grandmaster",
+        "meditation_expert": "meditation expert",
+        "meditation_master": "meditation master",
+        "meditation_magister": "meditation magister",
+        "meditation_grand_master": "meditation grandmaster",
+        "zigun_expert": "zigun expert",
+        "zigun_master": "zigun master",
+        "zigun_magister": "zigun magister",
         "weight": {
           "header": "Weight",
           "kg": "kg",
