--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -225,6 +225,8 @@
       "save_changes_warning": "После внесения изменений вы не сможете больше вернуться на страницу создания персонажа!",
       "delete_character": "Вы уверены что хотите удалить персонажа, его невозможно восстановить!",
       "karate": "Карате",
+      "meditation": "Медитация",
+      "zigun": "Ци-гун",
       "avatar": {
         "title": "Загрузить аватар персонажа",
         "default_message": "Перетащите картинку в область или кликните для загрузки",
@@ -335,6 +337,29 @@
         "initiative": "Количество кубиков на определение очередности хода в раунде. Равно реакции персонажа"
       },
       "additional_derivatives": {
+        "base_value": "База: ",
+        "in_min": "в мин.",
+        "dexterity_bonus": "бонус Ловкости",
+        "endurance_bonus": "бонус Выносливости",
+        "vitality_bonus": "бонус Живучести",
+        "power_bonus": "бонус Силы",
+        "will_bonus": "бонус Воли",
+        "charisma_bonus": "бонус Харизмы",
+        "skill_absent": "нет навыка",
+        "cloaking_expert": "эксперт Маскировки",
+        "cloaking_master": "мастер Маскировки",
+        "cloaking_magister": "магистр Маскировки",
+        "karate_expert": "эксперт Карате",
+        "karate_master": "мастер Карате",
+        "karate_magister": "магистр Карате",
+        "karate_grand_master": "гроссмейстер Карате",
+        "meditation_expert": "эксперт Медитации",
+        "meditation_master": "мастер Медитации",
+        "meditation_magister": "магистр Медитации",
+        "meditation_grand_master": "гроссмейстер Медитации",
+        "zigun_expert": "эксперт Ци-гуна",
+        "zigun_master": "мастер Ци-гуна",
+        "zigun_magister": "магистр Ци-гуна",
         "weight": {
           "header": "Вес",
           "kg": "кг",
@@ -378,7 +403,7 @@
           "cut": "Режущих",
           "blunt": "Дробящих"
         },
-        "mana_refresh": "Восстановление усталости",
+        "energy_refresh": "Восстановление усталости",
         "watchfulness_vision": "Наблюдательность (зрение)",
         "watchfulness_hearing": "Наблюдательность (слух)",
         "bounce": "Прыжок",
