--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -408,8 +408,8 @@
         "watchfulness_hearing": "Наблюдательность (слух)",
         "bounce": "Прыжок",
         "falling_damage_coefficient": "Коэффициент падучести",
-        "balance_check": "Устойчивость",
-        "poise_check": "Равновесие",
+        "balance_check": "Равновесие",
+        "poise_check": "Устойчивость",
         "cloaking": "Маскировка",
         "cloaking_moving": "Маскировка (движение)",
         "cloaking_not_moving": "Маскировка (неподвижность)",
