--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -190,6 +190,7 @@
       "trigger_skill_mastery": "Уровни владения:",
       "flaw_cant_delete": "Нельзя удалить",
       "edit_experience_title": "Опыт персонажа",
+      "edit_weight_title": "Текущий вес барахла",
       "half_elf_mage_title": "Особенные достоинства полуэльфов",
       "half_elf_mage_text": "У вас выпала особенность \"маг\". Полуэльфы могут увеличить свою силу магии при создании персонажа, купив дополнительную особенность за опыт.",
       "half_elf_attributes_text": "Полуэльфы обладают возможностью приобретать нижеперечисленные атрибуты по цене на 1 ехр ниже при создании. Вы можете выбрать один или несколько атрибутов, или не выбирать ни одного. Каждый выбранный атрибут обойдется вам в 10 ехр сейчас, но, возможно, позволит сэкономить на дальнейшей прокачке. ",
@@ -361,7 +362,7 @@
         "zigun_master": "мастер Ци-гуна",
         "zigun_magister": "магистр Ци-гуна",
         "weight": {
-          "header": "Вес",
+          "header": "Вес:",
           "kg": "кг",
           "1": ": (-1d) на прыжки, удержание равновесия и альпинизм  за каждое превышение предела. Затраты усталости на альпинизм возрастают вдвое",
           "2": ": (-1 единица) к скорости на спринтерский бег/ быстрый бег и (-1d) на устойчивость и маскировку  за каждое превышение предела",
