--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -228,6 +228,7 @@
       "karate": "Karate",
       "meditation": "Meditation",
       "zigun": "Zi-gun",
+      "suffolk_punch": "Suffolk punch",
       "avatar": {
         "title": "Upload character's avatar",
         "default_message": "Drag picture to the area or click for upload",
