--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -228,6 +228,7 @@
       "karate": "Карате",
       "meditation": "Медитация",
       "zigun": "Ци-гун",
+      "suffolk_punch": "Тяжеловоз",
       "avatar": {
         "title": "Загрузить аватар персонажа",
         "default_message": "Перетащите картинку в область или кликните для загрузки",
